snapshots/syntax/library/functions/datetime/date/date_multiple_references.snap
---
source: src/syntax/library/functions/datetime/date.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: AssignmentStatement
      children:
        - kind: IdentifierExpression
          children:
            - kind: Identifier
              text: startDate
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: IdentifierExpression
          children:
            - kind: DateKeyword
              text: Date
        - kind: Newline
          text: "\n"
    - kind: AssignmentStatement
      children:
        - kind: IdentifierExpression
          children:
            - kind: Identifier
              text: endDate
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: BinaryExpression
          children:
            - kind: IdentifierExpression
              children:
                - kind: DateKeyword
                  text: Date
            - kind: Whitespace
              text: " "
            - kind: AdditionOperator
              text: +
            - kind: Whitespace
              text: " "
            - kind: NumericLiteralExpression
              children:
                - kind: IntegerLiteral
                  text: "30"
        - kind: Newline
          text: "\n"
    - kind: AssignmentStatement
      children:
        - kind: IdentifierExpression
          children:
            - kind: Identifier
              text: range
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: BinaryExpression
          children:
            - kind: IdentifierExpression
              children:
                - kind: Identifier
                  text: endDate
            - kind: Whitespace
              text: " "
            - kind: SubtractionOperator
              text: "-"
            - kind: Whitespace
              text: " "
            - kind: IdentifierExpression
              children:
                - kind: Identifier
                  text: startDate
        - kind: Newline
          text: "\n"
